--- a/.github/workflows/daily-leetcode.yml
+++ b/.github/workflows/daily-leetcode.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: action-repo
+          token: ${{ secrets.GH_PAT }}
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -51,7 +52,6 @@ jobs:
         run: |
           cd action-repo
           git config user.name "GitHub Actions Bot"
-          git config user.email "actions@github.com"
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
           git add scripts/problem-history.json
           git diff --staged --quiet || git commit -m "Update problem history [skip ci]"
